fix: Moved subtitle; fixed text alignment

--- a/styles.css
+++ b/styles.css
@@ -65,7 +65,7 @@ html {
 }
 .promo__container {
   position: relative;
-  padding: 50px 20px 300px 20px;
+  padding: 100px 20px 300px 20px;
   max-width: 1196px;
   box-sizing: border-box;
   width: 100%;
@@ -73,6 +73,9 @@ html {
   background-repeat: no-repeat;
   background-position: right 20px top;
   background-size: 70%;
+  display: flex;
+  flex-direction: column;
+  row-gap: 50px;
 }
 
 @media only screen and (max-width: 865px) {
@@ -102,6 +105,7 @@ html {
   font-size: 50px;
   line-height: 67px;
   font-weight: 800;
+  margin: 0;
 }
 @media (max-width: 865px) {
   .promo__heading {
@@ -366,6 +370,7 @@ html {
   margin: 0;
 }
 .prompts__tagline {
+  text-align: center;
   color: var(--dark-gray);
   font-size: 30px;
   font-weight: 500;
